Add specification endpoints
