# pkg/app/routes.go
@@ -7,6 +7,10 @@ import (
 func (a *App) initializeRoutes() {
 	var apiV1 = "/api/v1"
 
+	// specification routes
+	a.Router.HandleFunc(apiV1+"/specification/list", a.listConnectorSpecification).Methods("GET", "OPTIONS")
+	a.Router.HandleFunc(apiV1+"/specification/test", a.testConnectorSpecification).Methods("POST", "OPTIONS")
+
 	// tickets routes
 	a.Router.HandleFunc(apiV1+"/tickets", a.getAllTickets).Methods("GET", "OPTIONS")
 	a.Router.HandleFunc(apiV1+"/tickets/{id}", a.getSingleTicket).Methods("GET", "OPTIONS")
