# pkg/models/accounts.go
@@ -30,3 +30,8 @@ type Account struct {
 		Email     string `json:"email,omitempty"`
 	} `json:"contact_person,omitempty"`
 }
+
+type Specification struct {
+	ApiKey     string `json:"api_key,omitempty"`
+	DomainName string `json:"domain_name,omitempty"`
+}
